[gd_scene load_steps=4 format=3 uid="uid://xrnld6ll3m0h"]

[ext_resource type="Script" uid="uid://dhthqbj36gf7m" path="res://script/start_menu.gd" id="1_e43t8"]
[ext_resource type="PackedScene" path="res://scene/start_menu_button.tscn" id="3_nld4k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2t3q"]
bg_color = Color(0.352, 0.36, 0.4, 1)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e43t8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i2t3q")

[node name="StartButton" parent="." instance=ExtResource("3_nld4k")]
layout_mode = 0
offset_left = 510.0
offset_top = 210.0
offset_right = 610.0
offset_bottom = 310.0

[node name="StartGame" type="Label" parent="StartButton"]
layout_mode = 0
offset_left = 20.0
offset_top = 23.0
offset_right = 82.0
offset_bottom = 73.0
text = "Start 
Game"
horizontal_alignment = 1

[node name="TutorialButton" parent="." instance=ExtResource("3_nld4k")]
layout_mode = 0
offset_left = 1220.0
offset_top = 210.0
offset_right = 1320.0
offset_bottom = 310.0

[node name="Tutorial" type="Label" parent="TutorialButton"]
layout_mode = 0
offset_left = 20.0
offset_top = 39.0
offset_right = 82.0
offset_bottom = 62.0
text = "Tutorial"

[node name="CreditsButton" parent="." instance=ExtResource("3_nld4k")]
layout_mode = 0
offset_left = 510.0
offset_top = 600.0
offset_right = 610.0
offset_bottom = 700.0

[node name="Credits" type="Label" parent="CreditsButton"]
layout_mode = 0
offset_left = 22.0
offset_top = 40.0
offset_right = 84.0
offset_bottom = 63.0
text = "Credits"

[node name="QuitButton" parent="." instance=ExtResource("3_nld4k")]
layout_mode = 0
offset_left = 1220.0
offset_top = 600.0
offset_right = 1320.0
offset_bottom = 700.0

[node name="Quit" type="Label" parent="QuitButton"]
layout_mode = 0
offset_left = 33.0
offset_top = 38.0
offset_right = 70.0
offset_bottom = 61.0
text = "Quit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
